--- a/manifest.json
+++ b/manifest.json
@@ -3,27 +3,33 @@
     "display": "standalone",
     "start_url": "/audio-player/",
     "short_name": "Online Radio",
-    "theme_color": "#404040",
+    "theme_color": "#000000",
     "description": "Tune in to your favourite online radio stations",
     "orientation": "any",
-    "background_color": "#404040",
+    "background_color": "#000000",
     "related_applications": [],
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "assets/icons/icon-512-512.png",
-            "sizes": "512x512"
+            "src": "assets/icons/icon-x512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any maskable"
         },
         {
-            "src": "assets/icons/icon-192-192.png",
-            "sizes": "192x192"
+            "src": "assets/icons/icon-x192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any maskable"
         },
         {
-            "src": "assets/icons/icon-48-48.png",
-            "sizes": "48x48"
+            "src": "assets/icons/icon-x48.png",
+            "sizes": "48x48",
+            "type": "image/png",
+            "purpose": "any maskable"
         },
         {
-            "src": "assets/icons/icon-16-16.png",
+            "src": "assets/icons/icon-x16.png",
             "sizes": "24x24"
         }
     ],
