--- a/.github/workflows/ingester.yml
+++ b/.github/workflows/ingester.yml
@@ -11,11 +11,15 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [12.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v2
+    - name: create env file
+      run: |
+        touch .env
+        echo FULL_ACCESS_RESTDB_API_KEY =${{ secrets.FULL_ACCESS_RESTDB_API_KEY }} >> .env
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
